--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -2,4 +2,18 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="default_text_size">20sp</dimen>
+
+    <!-- WIDTH -->
+    <dimen name="width_0">0dp</dimen>
+
+    <!-- HEIGHT -->
+    <dimen name="height_60">60dp</dimen>
+    <dimen name="height_192">192dp</dimen>
+
+    <!-- MARGIN -->
+    <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
+
+    <!-- PADDING -->
+    <dimen name="padding_16">16dp</dimen>
 </resources>
